# ganviz

./: .gitmodules  LICENSE  README.md  environment.yml  environment_works.yml  pyproject.toml  run_main.py  splatviz.py  test.py
gan_helper/: latent_vector.py
gaussian_splatting/gaussian_renderer/: __init__.py
gaussian_splatting/gs_utils/: general_utils.py  graphics_utils.py  system_utils.py
gaussian_splatting/scene/: cameras.py  gaussian_model.py
renderer/: gan_renderer.py  gan_renderer_gghead.py
splatviz_utils/dict_utils/: __init__.py
splatviz_utils/gui_utils/: imgui_utils.py  imgui_window.py  interface_imgui.py
widgets/: camera.py  edit.py  inversion.py  latent.py  load_pkl.py  render.py
